tests/vendor/valid/simple/ternary_middle_binop.c
//expect 1
//tags: simple, conditional
int main() {
    int a = 1 ? 3 % 2 : 4;
    return a;
}