tests/vendor/invalid/syntax/incomplete_ternary.c
//tags: simple, conditional
int main() {
    return 1 ? 2;
}